--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         rust: [nightly, beta, stable, 1.58.1, 1.17.0]
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: ${{matrix.rust}}
@@ -24,8 +24,8 @@ jobs:
         if: matrix.rust == 'nightly'
       - run: cargo test --features bench
         if: matrix.rust == 'nightly'
-      - run: cargo bench --features bench
-        if: matrix.rust == 'nightly'
+      # - run: cargo bench --features bench
+        # if: matrix.rust == 'nightly'
       - run: cargo build
       - run: cargo test
         if: matrix.rust != '1.17.0'
