--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,9 +27,9 @@ default = []
 no_std = []
 bench = []
 
-[dev-dependencies]
-criterion = "0.3.5"
+# [dev-dependencies]
+# criterion = "0.3.5"
 
-[[bench]]
-name = "id"
-harness = false
+# [[bench]]
+# name = "id"
+# harness = false
