--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         rust: [nightly, beta, stable, 1.58.1, 1.17.0]
     steps:
-      - uses: actions/checkout@v5
+      - uses: taiki-e/checkout-action@v1
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: ${{matrix.rust}}
